Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_vulnerableapp4kubernetes.yml
+++ b/.github/workflows/main_vulnerableapp4kubernetes.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - vulnerableapp4kubernetes
+name: Build and deploy ASP.Net Core app to Azure Web App - VulnerableApp4Kubernetes
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -35,7 +35,7 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     environment:
       name: 'Production'
@@ -51,7 +51,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'vulnerableapp4kubernetes'
+          app-name: 'VulnerableApp4Kubernetes'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_94D027B0552846F9A29E7E3DD02BEC41 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C85B792AC84945E3BBE09E019E39CEDB }}
           package: .
