Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_vulnerableapp4kubernetes.yml
+++ b/.github/workflows/main_vulnerableapp4kubernetes.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -35,7 +35,7 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
@@ -53,5 +53,5 @@ jobs:
         with:
           app-name: 'VulnerableApp4Kubernetes'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C85B792AC84945E3BBE09E019E39CEDB }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_83366DE31F1F41EEB163CB9A1E3BA85D }}
           package: .
